# extract-data-catalogue

./: README.md  pyproject.toml  requirements.txt
sandbox/: testfile.txt
sandbox/.ipynb_checkpoints/: test_nuvla_connection-checkpoint.py
src/catalogue/: consumer.py
src/extract_datacatalogue/: consume.py  produce.py  test.py
