[project]
name = "extract-datacatalogue"
version = "0.1.0"
description = ""
authors = [
    {name = "ignacio.penas",email = "ignacio.penas@ekinops.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "nuvla-api (>=4.2.3,<5.0.0)",
    "boto3 (>=1.38.45,<2.0.0)",
    "jupytext (>=1.17.3,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.7,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
